<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.luizdeveloper.mycalculator.MainActivity"
    tools:showIn="@layout/activity_main"
    android:background="@color/background_material_dark">

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/gridLayout"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="false"
        android:layout_alignParentStart="false"
        android:layout_alignParentRight="false"
        android:layout_alignWithParentIfMissing="false"
        android:layout_alignParentLeft="false"
        android:layout_centerHorizontal="true">

        <Button
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:text="@string/buttonCText"
            android:background="@drawable/blue_button_shape"
            android:id="@+id/clearButton"
            android:layout_row="0"
            android:layout_column="0"
            android:onClick="buttonClick"/>

        <Button
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:text="@string/buttonDivText"
            android:id="@+id/divButton"
            android:layout_column="3"
            android:background="@drawable/yellow_button_shape"
            android:onClick="buttonClick"/>

        <Button
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:text="@string/button7Text"
            android:background="@drawable/number_button_shape"
            android:id="@+id/button7"
            android:layout_row="1"
            android:layout_column="0"
            android:onClick="buttonClick"/>

        <Button
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:text="@string/button8Text"
            android:background="@drawable/number_button_shape"
            android:id="@+id/button8"
            android:layout_row="1"
            android:layout_column="1"
            android:onClick="buttonClick"/>

        <Button
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:text="@string/button9Text"
            android:background="@drawable/number_button_shape"
            android:id="@+id/button9"
            android:layout_row="1"
            android:layout_column="2"
            android:onClick="buttonClick"/>

        <Button
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:text="@string/buttonMultText"
            android:id="@+id/multButton"
            android:layout_row="1"
            android:layout_column="3"
            android:background="@drawable/yellow_button_shape"
            android:onClick="buttonClick"/>

        <Button
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:text="@string/button4Text"
            android:background="@drawable/number_button_shape"
            android:id="@+id/button4"
            android:layout_row="2"
            android:layout_column="0"
            android:onClick="buttonClick"/>

        <Button
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:text="@string/button5Text"
            android:background="@drawable/number_button_shape"
            android:id="@+id/button5"
            android:layout_row="2"
            android:layout_column="1"
            android:onClick="buttonClick"/>

        <Button
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:text="@string/button6Text"
            android:background="@drawable/number_button_shape"
            android:id="@+id/button6"
            android:layout_row="2"
            android:layout_column="2"
            android:onClick="buttonClick"/>

        <Button
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:text="@string/buttonSubText"
            android:id="@+id/subButton"
            android:layout_row="2"
            android:layout_column="3"
            android:background="@drawable/yellow_button_shape"
            android:onClick="buttonClick"/>

        <Button
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:text="@string/button1Text"
            android:background="@drawable/number_button_shape"
            android:id="@+id/button1"
            android:layout_row="3"
            android:layout_column="0"
            android:onClick="buttonClick"/>

        <Button
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:text="@string/button2Text"
            android:background="@drawable/number_button_shape"
            android:id="@+id/button2"
            android:layout_row="3"
            android:layout_column="1"
            android:onClick="buttonClick"/>

        <Button
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:text="@string/button3Text"
            android:background="@drawable/number_button_shape"
            android:id="@+id/button3"
            android:layout_row="3"
            android:layout_column="2"
            android:onClick="buttonClick"/>

        <Button
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:text="@string/buttonAddText"
            android:id="@+id/addButton"
            android:layout_row="3"
            android:layout_column="3"
            android:background="@drawable/yellow_button_shape"
            android:onClick="buttonClick"/>

        <Button
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:text="@string/button0Text"
            android:background="@drawable/number_button_shape"
            android:id="@+id/button0"
            android:layout_row="4"
            android:layout_column="0"
            android:onClick="buttonClick"/>

        <Button
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:text="@string/buttonDotText"
            android:background="@drawable/blue_button_shape"
            android:id="@+id/dotButton"
            android:layout_row="4"
            android:layout_column="2"
            android:onClick="buttonClick"/>

        <Button
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:text="@string/buttonEqualText"
            android:id="@+id/resultButton"
            android:layout_row="4"
            android:layout_column="3"
            android:background="@drawable/yellow_button_shape"
            android:onClick="buttonClick"/>
    </GridLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/textViewResult"
        android:textColor="@color/button_material_light"
        android:textSize="40sp"
        android:layout_above="@+id/gridLayout"
        android:layout_alignRight="@+id/gridLayout"
        android:layout_alignEnd="@+id/gridLayout" />
</RelativeLayout>
